detail and edit layers created

--- a/Glamboyant.Data/Glamboyant.Data.csproj
+++ b/Glamboyant.Data/Glamboyant.Data.csproj
@@ -56,11 +56,28 @@
   <ItemGroup>
     <Compile Include="HairService.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202009281507244_InitialCreate.cs" />
+    <Compile Include="Migrations\202009281507244_InitialCreate.Designer.cs">
+      <DependentUpon>202009281507244_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202009291440332_firstMigration.cs" />
+    <Compile Include="Migrations\202009291440332_firstMigration.Designer.cs">
+      <DependentUpon>202009291440332_firstMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202009281507244_InitialCreate.resx">
+      <DependentUpon>202009281507244_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009291440332_firstMigration.resx">
+      <DependentUpon>202009291440332_firstMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
