--- a/Glamboyant/Glamboyant.csproj
+++ b/Glamboyant/Glamboyant.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\HairService\Create.cshtml" />
     <Content Include="Views\HairService\Details.cshtml" />
     <Content Include="Views\HairService\Edit.cshtml" />
+    <Content Include="Views\HairService\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
