--- a/Glamboyant.Data/Glamboyant.Data.csproj
+++ b/Glamboyant.Data/Glamboyant.Data.csproj
@@ -66,6 +66,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
