--- a/Glamboyant.Models/Glamboyant.Models.csproj
+++ b/Glamboyant.Models/Glamboyant.Models.csproj
@@ -59,10 +59,15 @@
     <Compile Include="HairServiceModels\HairServiceEdit.cs" />
     <Compile Include="HairServiceModels\HairServiceListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserModels\UserCreate.cs" />
+    <Compile Include="UserModels\UserDetail.cs" />
+    <Compile Include="UserModels\UserEdit.cs" />
+    <Compile Include="UserModels\UserListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
