--- a/Glamboyant.Services/Glamboyant.Services.csproj
+++ b/Glamboyant.Services/Glamboyant.Services.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="HairServiceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
