--- a/Glamboyant/Glamboyant.csproj
+++ b/Glamboyant/Glamboyant.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\HairServiceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -240,6 +241,7 @@
     <Content Include="Views\HairService\Details.cshtml" />
     <Content Include="Views\HairService\Edit.cshtml" />
     <Content Include="Views\HairService\Delete.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
