--- a/Glamboyant/Glamboyant.csproj
+++ b/Glamboyant/Glamboyant.csproj
@@ -242,6 +242,10 @@
     <Content Include="Views\HairService\Edit.cshtml" />
     <Content Include="Views\HairService\Delete.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\User\Create.cshtml" />
+    <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\User\Edit.cshtml" />
+    <Content Include="Views\User\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
