appointment junction table service created

--- a/Glamboyant.Data/Glamboyant.Data.csproj
+++ b/Glamboyant.Data/Glamboyant.Data.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Appointment.cs" />
     <Compile Include="HairService.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Migrations\202009281507244_InitialCreate.cs" />
