--- a/Glamboyant.Data/Glamboyant.Data.csproj
+++ b/Glamboyant.Data/Glamboyant.Data.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\202009291440332_firstMigration.Designer.cs">
       <DependentUpon>202009291440332_firstMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009301506253_newTables.cs" />
+    <Compile Include="Migrations\202009301506253_newTables.Designer.cs">
+      <DependentUpon>202009301506253_newTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
@@ -79,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202009291440332_firstMigration.resx">
       <DependentUpon>202009291440332_firstMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009301506253_newTables.resx">
+      <DependentUpon>202009301506253_newTables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
