--- a/Glamboyant.Services/Glamboyant.Services.csproj
+++ b/Glamboyant.Services/Glamboyant.Services.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AppointmentService.cs" />
     <Compile Include="HairServiceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReviewService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
