--- a/Glamboyant.Data/Glamboyant.Data.csproj
+++ b/Glamboyant.Data/Glamboyant.Data.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\202009301506253_newTables.Designer.cs">
       <DependentUpon>202009301506253_newTables.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202009301925171_review.cs" />
+    <Compile Include="Migrations\202009301925171_review.Designer.cs">
+      <DependentUpon>202009301925171_review.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Review.cs" />
@@ -87,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202009301506253_newTables.resx">
       <DependentUpon>202009301506253_newTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202009301925171_review.resx">
+      <DependentUpon>202009301925171_review.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
