--- a/Glamboyant/Glamboyant.csproj
+++ b/Glamboyant/Glamboyant.csproj
@@ -183,6 +183,11 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\blowdryer.png" />
+    <Content Include="Assets\GlamboyantLogo.png" />
+    <Content Include="Assets\Hair1.jpg" />
+    <Content Include="Assets\spraytan.png" />
+    <Content Include="Assets\stylist.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
