--- a/Glamboyant.Data/Glamboyant.Data.csproj
+++ b/Glamboyant.Data/Glamboyant.Data.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Migrations\202010021739475_appointmentUpdate.Designer.cs">
       <DependentUpon>202010021739475_appointmentUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202010051908244_photo.cs" />
+    <Compile Include="Migrations\202010051908244_photo.Designer.cs">
+      <DependentUpon>202010051908244_photo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Review.cs" />
@@ -101,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202010021739475_appointmentUpdate.resx">
       <DependentUpon>202010021739475_appointmentUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202010051908244_photo.resx">
+      <DependentUpon>202010051908244_photo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
